--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  webview_flutter: ^0.3.23
+  jaguar: ^2.4.44
+  archive: ^2.0.13
+  path_provider: ^1.6.18
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,7 +48,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/www.zip
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
