--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^1.0.7
+  flutter_inappwebview: ^4.0.0+4
   jaguar: ^2.4.44
   archive: ^2.0.13
   path_provider: ^1.6.24
+  shared_preferences: ^0.5.12+4
+  crypto: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
